8347463: jdk/jfr/threading/TestManyVirtualThreads.java crashes with  assert(oopDesc::is_oop_or_null(val))

Reviewed-by: dlong, rcastanedalo, mgronlun